[package]
name = "ndraey_downloader"
version = "0.1.2"
edition = "2021"
author = ["NDRAEY <pikachu_andrey@vk.com>"]
description = "A simple library for downloading files"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.14"
reqwest = { version = "0.11.12", features = ["stream"] }
