[package]
name = "ndraey_downloader"
version = "0.1.7"
edition = "2021"
authors = ["NDRAEY <pikachu_andrey@vk.com>"]
description = "A simple library for downloading files"
license = "GPL-3.0-or-later"
repository = "https://github.com/NDRAEY/ndraey_downloader"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.14"
reqwest = { version = "0.12.12", features = ["rustls-tls","stream"] }
tokio = { version = "1.21.2", features = ["full"] }

[[example]]
name = "ndraey_download"
